kubernetes/cluster/smart-home/psa-car-controller/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: psa-car-controller
  namespace: smart-home
  labels:
    app.kubernetes.io/name: psa-car-controller
  annotations:
    kubernetes.io/ingress.class: public
    cert-manager.io/cluster-issuer: lets-encrypt
    nginx.ingress.kubernetes.io/auth-response-headers: >-
      Set-Cookie,X-authentik-username,X-authentik-groups,X-authentik-email,X-authentik-name,X-authentik-uid
    nginx.ingress.kubernetes.io/auth-signin: >-
      https://car.brhd.io/outpost.goauthentik.io/start?rd=$escaped_request_uri
    nginx.ingress.kubernetes.io/auth-snippet: |
      proxy_set_header X-Forwarded-Host $http_host;
    nginx.ingress.kubernetes.io/auth-url: >-
      http://authentik-outpost-embedded.default.svc.cluster.local.:9000/outpost.goauthentik.io/auth/nginx
spec:
  rules:
    - host: car.brhd.io
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: psa-car-controller
                port:
                  number: 5000
  tls:
    - hosts:
        - car.brhd.io
